<resources>
    <string name="app_name">Fishy</string>
    <string name="answer_a">Answer A</string>
    <string name="answer_b">Answer B</string>
    <string name="answer_c">Answer C</string>
    <string name="next">Next</string>
    <string name="progressText">100%</string>
    <string name="resetText">x</string>
    <string name="question">Für das Hegefischen wurde im Voraus bestimmt, die gefangenen untermaßigen Plötzen in ein
        kühleres, raubfischreiches Gewässer umzusetzen. Welche Bedingungen sind zu erfüllen?
    </string>
</resources>
