<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/progressBar"
            app:layout_constraintStart_toStartOf="@+id/questionText"
            app:layout_constraintEnd_toStartOf="@+id/buttonReset"
            android:layout_marginEnd="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/buttonReset"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintTop_toTopOf="@+id/buttonReset"/>
    <TextView
            android:text="@string/progressText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressText"
            app:layout_constraintBottom_toBottomOf="@+id/progressBar"
            app:layout_constraintTop_toTopOf="@+id/progressBar" app:layout_constraintEnd_toEndOf="@+id/progressBar"
            app:layout_constraintStart_toStartOf="@+id/progressBar"/>
    <TextView
            android:layout_width="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.483" android:id="@+id/questionText"
            android:layout_marginLeft="10dp" android:layout_marginRight="10dp"
            app:layout_constraintBottom_toTopOf="@+id/buttonA" android:layout_height="wrap_content"
            android:textSize="18sp" android:textAlignment="center"
            android:text="Für das Hegefischen wurde im Voraus bestimmt, die gefangenen untermaßigen Plötzen in ein kühleres, raubfischreiches Gewässer umzusetzen. Welche Bedingungen sind zu erfüllen?"
            app:layout_constraintTop_toBottomOf="@+id/buttonReset" android:minHeight="120dp"
            android:fontFamily="sans-serif-black" android:typeface="normal"
            android:paddingRight="10dp" android:paddingLeft="10dp" android:layout_margin="10dp"/>
    <Button
            android:text="@string/answer_a"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/buttonA" app:layout_constraintEnd_toEndOf="@+id/questionText"
            app:layout_constraintStart_toStartOf="@+id/questionText"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toTopOf="@+id/buttonB"
            android:onClick="onClick" android:textSize="14sp" android:textAlignment="center" android:minHeight="80dp"
            android:fontFamily="sans-serif" android:typeface="normal" android:textAllCaps="false"
            android:paddingRight="10dp" android:paddingLeft="10dp" android:layout_margin="10dp"/>
    <Button
            android:text="@string/answer_b"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/buttonB" app:layout_constraintEnd_toEndOf="@+id/questionText"
            app:layout_constraintStart_toStartOf="@+id/questionText" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginBottom="10dp" app:layout_constraintBottom_toTopOf="@+id/buttonC"
            android:onClick="onClick" android:textSize="14sp" android:textAlignment="center"
            android:minHeight="80dp" android:fontFamily="sans-serif" android:typeface="normal"
            android:textAllCaps="false"
            android:paddingRight="10dp" android:paddingLeft="10dp" android:layout_margin="10dp"/>
    <Button
            android:text="Schriftliche Angaben über: Gewässer und Entnahmestelle, Datum und Uhrzeit der Entnahme, Name und Anschrift des Probenehmers, wichtige Beobachtungen"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/buttonC" app:layout_constraintEnd_toEndOf="@+id/questionText"
            app:layout_constraintStart_toStartOf="@+id/questionText" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintBottom_toTopOf="@+id/buttonNext"
            android:onClick="onClick" android:textSize="14sp" android:textAlignment="center" android:minHeight="80dp"
            android:fontFamily="sans-serif" android:typeface="normal" android:textAllCaps="false"
            android:paddingRight="10dp" android:paddingLeft="10dp" android:layout_margin="10dp"/>
    <Button
            android:text="@string/next"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:id="@+id/buttonNext" app:layout_constraintEnd_toEndOf="@+id/questionText"
            app:layout_constraintStart_toStartOf="@+id/questionText" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginBottom="10dp" app:layout_constraintBottom_toBottomOf="parent"
            android:onClick="onClick" android:fontFamily="sans-serif"
            android:paddingRight="10dp" android:paddingLeft="10dp" android:layout_margin="10dp"/>
    <Button
            android:text="@string/resetText"
            android:layout_width="41dp"
            android:layout_height="41dp"
            android:id="@+id/buttonReset"
            app:layout_constraintEnd_toEndOf="@+id/questionText"
            android:layout_marginTop="10dp" app:layout_constraintTop_toTopOf="parent" android:onClick="onClick"/>

</android.support.constraint.ConstraintLayout>
